feat: complete translation to Chinese

--- a/recording/templates/about.html
+++ b/recording/templates/about.html
@@ -6,11 +6,10 @@
 <head>
     <div class="container">
     <title> {%trans "Recording" %} </title>
-    <h1> {%trans "Idea" %} </h1>
+    <h1> {%trans "Summary" %} </h1>
     <p> {% blocktrans %}
-    This project tries to collect as many recordings from native Mandarin
-    Chinese speakers. The main goal is to use these recordings to help
-    students learning Mandarin Chinese practice their tone recognition.
+        The goal of this project is to collect as many recordings from native Mandarin Chinese speakers.
+        These recordings will be used to help students learning Mandarin Chinese practice their tone recognition.
     {% endblocktrans %} </p>
     <h1> {%trans "Practical" %} </h1>
     {% url 'userregistation' as userregistation %}
